Added brim in the cylinder to improve bed adhesion with ABS printing with ender 3. Intial test for importing STL files into python to use in full control.

--- a/models/stoneflower_cylinder_rectilinearV2.ipynb
+++ b/models/stoneflower_cylinder_rectilinearV2.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {
         "id": "57XXnogSOvDx"
       },
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 14,
       "metadata": {
         "id": "DeWKjlzbPC0u"
       },
@@ -119,30 +119,32 @@
       "source": [
         "# design parameters\n",
         "\n",
-        "EW = 0.5 # extrusion width\n",
-        "EH = 0.25 # extrusion height (and layer height)\n",
+        "EW = 0.4 # extrusion width\n",
+        "EH = 0.4 # extrusion height (and layer height)\n",
         "initial_z = EH*1 # initial nozzle position can be set to a multiple of the extrusion height to get a bit of 'squish' for good bed adhesion\n",
         "height=1 #Height of cylinder in mm\n",
         "layers = int(height//EH)\n",
-        "dia=20 #diameter of the cylinder in mm\n",
+        "dia=30 #diameter of the cylinder in mm\n",
         "radius = dia/2\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 15,
       "metadata": {
         "id": "kLPh7aTwQKrF"
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "radius=10.0 angle=0.0\n",
-            "radius=10.0 angle=0.0\n",
-            "radius=10.0 angle=0.0\n",
-            "radius=10.0 angle=0.0\n"
+          "ename": "ValueError",
+          "evalue": "math domain error",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 18\u001b[39m\n\u001b[32m     16\u001b[39m circle_steps.extend(fc.arcXY(centre_point,radius-EW,circle_start,\u001b[32m0.5\u001b[39m*math.pi,segments))\u001b[38;5;66;03m#calculate inner arc to move nozzle inposition for next layer        \u001b[39;00m\n\u001b[32m     17\u001b[39m first_point=fc.move(initial_xyz,fc.Vector(y=radius,z=EH*layer))               \n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m infill_steps = \u001b[43mcircle_infill_arc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdia\u001b[49m\u001b[43m-\u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m*\u001b[49m\u001b[43mEW\u001b[49m\u001b[43m,\u001b[49m\u001b[43mfirst_point\u001b[49m\u001b[43m,\u001b[49m\u001b[43mcentre_point\u001b[49m\u001b[43m,\u001b[49m\u001b[43mline_spacing\u001b[49m\u001b[43m,\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;66;03m#Calculate infill points              \u001b[39;00m\n\u001b[32m     19\u001b[39m layer1.extend(infill_steps)\u001b[38;5;66;03m#Draw the infill first\u001b[39;00m\n\u001b[32m     20\u001b[39m layer1.extend(circle_steps)\u001b[38;5;66;03m#Draw perimeter and arc       \u001b[39;00m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 10\u001b[39m, in \u001b[36mcircle_infill_arc\u001b[39m\u001b[34m(diameter, start_point, centre_point, line_space, direction)\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m space \u001b[38;5;129;01min\u001b[39;00m np.arange(\u001b[32m0\u001b[39m,diameter,line_space):\n\u001b[32m      9\u001b[39m             start_angle=math.acos((radius_c-space)/radius_c)+start_polar.angle\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m             end_angle=\u001b[43mmath\u001b[49m\u001b[43m.\u001b[49m\u001b[43macos\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mradius_c\u001b[49m\u001b[43m-\u001b[49m\u001b[43m(\u001b[49m\u001b[43mspace\u001b[49m\u001b[43m+\u001b[49m\u001b[43mline_space\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m/\u001b[49m\u001b[43mradius_c\u001b[49m\u001b[43m)\u001b[49m +start_polar.angle                       \n\u001b[32m     11\u001b[39m             steps.extend(fc.arcXY(centre=centre_point, radius=radius_c,start_angle=(start_angle*flag)+direction,arc_angle=(end_angle-start_angle)*flag,segments=\u001b[32m32\u001b[39m))\n\u001b[32m     12\u001b[39m             \u001b[38;5;66;03m#steps.append(fc.polar_to_point(centre=steps[-1], radius=(math.sqrt((radius_c**2)-(radius_c-space)**2)),angle=start_polar.angle-(math.radians(90)*flag)))           \u001b[39;00m\n",
+            "\u001b[31mValueError\u001b[39m: math domain error"
           ]
         }
       ],
