Trying to print with the ender_5_pro_ceramic

--- a/models/stoneflower_mech_specimenv2.ipynb
+++ b/models/stoneflower_mech_specimenv2.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 25,
       "metadata": {
         "id": "57XXnogSOvDx"
       },
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -42,12 +42,12 @@
         "bed_temp = 0\n",
         "print_speed = 300\n",
         "fan_percent = 0\n",
-        "printer_name='stoneflower3d' # generic / ultimaker2plus / prusa_i3 / ender_3 / cr_10 / bambulab_x1 / toolchanger_T0"
+        "printer_name='ender_5_pro_ceramic' # generic / ultimaker2plus / prusa_i3 / ender_3 / cr_10 / bambulab_x1 / toolchanger_T0"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 27,
       "metadata": {
         "id": "DeWKjlzbPC0u"
       },
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 28,
       "metadata": {
         "id": "kLPh7aTwQKrF"
       },
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 29,
       "metadata": {
         "id": "ZVdfnpt5RSUi"
       },
@@ -5632,7 +5632,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5648,6 +5648,24 @@
           "text": [
             "warning - the list of steps should be a 1D list of fullcontrol class instances, it currently includes a 'list'\n",
             "   - fc.flatten() is being used to convert the design to a 1D list\n"
+          ]
+        },
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'fullcontrol.devices.community.singletool.ender_5_pro_ceramic'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# generate and save gcode\u001b[39;00m\n\u001b[32m      3\u001b[39m gcode_controls = fc.GcodeControls(\n\u001b[32m      4\u001b[39m     printer_name=printer_name,\n\u001b[32m      5\u001b[39m     save_as=design_name,\n\u001b[32m   (...)\u001b[39m\u001b[32m     12\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mextrusion_width\u001b[39m\u001b[33m'\u001b[39m: EW,\n\u001b[32m     13\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mextrusion_height\u001b[39m\u001b[33m'\u001b[39m: EH})\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m gcode = \u001b[43mfc\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43msteps\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mgcode\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgcode_controls\u001b[49m\u001b[43m)\u001b[49m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\u384v435\\AppData\\Local\\miniconda3\\Lib\\site-packages\\fullcontrol\\combinations\\gcode_and_visualize\\common.py:38\u001b[39m, in \u001b[36mtransform\u001b[39m\u001b[34m(steps, result_type, controls, show_tips)\u001b[39m\n\u001b[32m     36\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m controls \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m: controls = GcodeControls()\n\u001b[32m     37\u001b[39m     steps = fix(steps, result_type, controls)\n\u001b[32m---> \u001b[39m\u001b[32m38\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mgcode\u001b[49m\u001b[43m(\u001b[49m\u001b[43msteps\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcontrols\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshow_tips\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     40\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m result_type == \u001b[33m'\u001b[39m\u001b[33mplot\u001b[39m\u001b[33m'\u001b[39m:\n\u001b[32m     41\u001b[39m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01mfullcontrol\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvisualize\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msteps2visualization\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m visualize\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\u384v435\\AppData\\Local\\miniconda3\\Lib\\site-packages\\fullcontrol\\gcode\\steps2gcode.py:26\u001b[39m, in \u001b[36mgcode\u001b[39m\u001b[34m(steps, gcode_controls, show_tips)\u001b[39m\n\u001b[32m     23\u001b[39m gcode_controls.initialize()\n\u001b[32m     24\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m show_tips: tips(gcode_controls)\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m state = \u001b[43mState\u001b[49m\u001b[43m(\u001b[49m\u001b[43msteps\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgcode_controls\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     27\u001b[39m \u001b[38;5;66;03m# need a while loop because some classes may change the length of state.steps\u001b[39;00m\n\u001b[32m     28\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m state.i < \u001b[38;5;28mlen\u001b[39m(state.steps):\n\u001b[32m     29\u001b[39m     \u001b[38;5;66;03m# call the gcode function of each class instance in 'steps'\u001b[39;00m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\u384v435\\AppData\\Local\\miniconda3\\Lib\\site-packages\\fullcontrol\\gcode\\state.py:60\u001b[39m, in \u001b[36mState.__init__\u001b[39m\u001b[34m(self, steps, gcode_controls)\u001b[39m\n\u001b[32m     57\u001b[39m     initialization_data = import_printer(gcode_controls.printer_name, gcode_controls.initialization_data)\n\u001b[32m     58\u001b[39m     \u001b[38;5;66;03m# note if using 'no_primer' there is a risk that no initial Point is defined before the first G1 command meaning length calculation for the line is impossible and an error will occur\u001b[39;00m\n\u001b[32m     59\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m60\u001b[39m     initialization_data = \u001b[43mimport_module\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43mf\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mfullcontrol.devices.community.singletool.\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mgcode_controls\u001b[49m\u001b[43m.\u001b[49m\u001b[43mprinter_name\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m.set_up(gcode_controls.initialization_data)\n\u001b[32m     62\u001b[39m \u001b[38;5;28mself\u001b[39m.extruder = Extruder(\n\u001b[32m     63\u001b[39m     units=initialization_data[\u001b[33m'\u001b[39m\u001b[33me_units\u001b[39m\u001b[33m'\u001b[39m],\n\u001b[32m     64\u001b[39m     dia_feed=initialization_data[\u001b[33m'\u001b[39m\u001b[33mdia_feed\u001b[39m\u001b[33m'\u001b[39m],\n\u001b[32m     65\u001b[39m     total_volume=\u001b[32m0\u001b[39m,\n\u001b[32m     66\u001b[39m     total_volume_ref=\u001b[32m0\u001b[39m,\n\u001b[32m     67\u001b[39m     travel_format=initialization_data[\u001b[33m'\u001b[39m\u001b[33mtravel_format\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m     68\u001b[39m \u001b[38;5;28mself\u001b[39m.extruder.update_e_ratio()\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\u384v435\\AppData\\Local\\miniconda3\\Lib\\importlib\\__init__.py:90\u001b[39m, in \u001b[36mimport_module\u001b[39m\u001b[34m(name, package)\u001b[39m\n\u001b[32m     88\u001b[39m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m     89\u001b[39m         level += \u001b[32m1\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m90\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_bootstrap\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_gcd_import\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m[\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpackage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m)\u001b[49m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m<frozen importlib._bootstrap>:1387\u001b[39m, in \u001b[36m_gcd_import\u001b[39m\u001b[34m(name, package, level)\u001b[39m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m<frozen importlib._bootstrap>:1360\u001b[39m, in \u001b[36m_find_and_load\u001b[39m\u001b[34m(name, import_)\u001b[39m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m<frozen importlib._bootstrap>:1324\u001b[39m, in \u001b[36m_find_and_load_unlocked\u001b[39m\u001b[34m(name, import_)\u001b[39m\n",
+            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'fullcontrol.devices.community.singletool.ender_5_pro_ceramic'"
           ]
         }
       ],
